# alexis

./: .eslintrc.json  .gitignore  Readme.md  data  docker-compose.yaml  export_load.py  marketplace.json  package-lock.json  package.json  pyproject.toml  test.http  tsconfig.json
client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.tsx  index.tsx  store.ts
client/src/components/: Login.tsx  Main.tsx  Query.tsx  (+3 more)
docs/mermaid-graphs/: full-graph.mmd  upload-and-index.mmd
graphs/: answerQuery.mmd  generalOverview.mmd  uploadAndIndex.mmd
onnx_model/: config.json  ro-optimized-quantized.onnx  special_tokens_map.json  tokenizer_config.json
redis/: Dockerfile
server/: .eslintrc.json  app.ts  consumer.test.ts  consumer.ts  dev.env  index.html  index.ts  keyFinder.ts  load.ts  package-lock.json  package.json  runSafely.ts  startRedis.sh  tsconfig.json
server/answering/: errors.ts  handler.ts  inference.test.ts  inference.ts  qa.test.ts  qa.ts  search.ts  tokenizer.test.ts  tokenizer.ts
server/config/: index.ts
server/lib/: crypto.ts  error.test.ts  error.ts  express.ts  log.ts  math.ts  pdf.test.ts  pdf.test2.ts  pdf.ts  redis.ts  sleep.ts  text.ts
server/pdf-processing/: handler.ts  service.ts  store.ts  worker.ts
server/src/: app.ts  index.ts
server/users/: errors.ts  handler.ts  redis.ts  service.ts  types.ts
ts/: .env_example  .eslintrc.json  .nvmrc  .prettierignore  package-lock.json  package.json
ts/src/: app.ts  build.js  config.ts  index.html  load.ts  server.ts
ts/test/: dummy.test.ts
(+38 files in other folders)
